Hint overlap fix

--- a/src/app/_styles/ui.less
+++ b/src/app/_styles/ui.less
@@ -19,10 +19,10 @@ html {
 }
 
 .hint {
-    position: absolute;
+    position: relative;
     left: 4px;
     right: auto;
-    bottom: -17px;
+    bottom: -5px;
     font-style: italic;
     /* Copy styles from ng-messages */
     font-size: 12px;
